# StructuralAnalysisToolbox

./: .gitignore  LICENSE  README.md  TODO  model.py  pyproject.toml  pyrightconfig.json
Interactions/Constraints/: MPC184_Rigid.py
Materials/: Material.py  MaterialModel.py
Modeller/: model.py
Modeller/Materials/: material.py
examples/04_BC_and_Loads/: Force_to_Element_Faces.ipynb  Pressure_to_Nodes.ipynb  Pressure_to_Surface_Elements.ipynb  load_step-2.ipynb  load_table.ipynb  surface_loads copy 2.ipynb  surface_loads copy.ipynb
examples/06_Solution/: Force_to_Element_Faces.ipynb  Pressure_to_Element_Faces.ipynb  load_step-2.ipynb  load_table.ipynb  restart_analysis.ipynb  surface_loads copy 2.ipynb  surface_loads copy 3.ipynb
examples/07_Solution/: restart_analysis.ipynb
examples/visualization/: mesh_plotter.ipynb
src/: main.py
src/structuralanalysistoolbox/: __init__.py  model.py  modeller.py  selection.py
src/structuralanalysistoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/structuralanalysistoolbox/Interactions/: constraint.py
src/structuralanalysistoolbox/Materials/: material.py  materialdatabase.json  matlib.py
src/structuralanalysistoolbox/config/: settings.py
src/structuralanalysistoolbox/constraints/: constraint.py  contact.py
src/structuralanalysistoolbox/data/: element.py
src/structuralanalysistoolbox/loading/: loadstep.py
src/structuralanalysistoolbox/mapdl/: attributes.py  command.py  element.py  files.py
src/structuralanalysistoolbox/meshing/: element.py  importing.py  mesh.py
(+4 files in other folders)
