[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structuralanalysistoolbox"
version = "0.1.0"
description = "FEA and structural analysis utilities."
authors = [{ name = "Yigit" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ansys-mapdl-core>=0.71.1",
    "ansys-dpf-post==0.10.1"
]

[tool.setuptools.package-data]
structuralanalysistoolbox = ["materials/materialdatabase.json"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



